Prepare for porting messages_en.yml

--- a/src/main/resources/localization/messages_en.yml
+++ b/src/main/resources/localization/messages_en.yml
@@ -37,6 +37,12 @@ Commands:
   ChatDisabled: "              &3Chat has been &cdisabled!"
   ChatCleared: "              &3Chat has been &bcleared!"
   Checkban_Provide_name: "&cProvide player name."
+  Checkban_IPBanned: "&3Player &b{target} &3is banned &3&lfor IP!"
+  Checkban_Banned: "&3Player &b{player} &3is banned!"
+  Checkban_Created: "&3Created: {created}"
+  Checkban_Expiry: "&3Expires: {expiry}"
+  Checkban_Reason: "&3Reason: {reason}"
+  Checkban_Source: "&Source: {source}"
   Enderchest_Succesful: "&bEnderchest opened for &3{player}"
   Feed: "&3You are no more hungry!"
   Feed_Other: "&3Succesfully feed {player}."
