--- a/src/main/resources/localization/messages_en.yml
+++ b/src/main/resources/localization/messages_en.yml
@@ -24,7 +24,7 @@ Commands:
   AdminChatPrefix: "&8[&4AdminChat&8] » &7"
   Invalid_PlayerNickName: "&cOk... What's a pitty, that this player is not even on this server. Who do you want me to teleport? Air?"
   Invalid_Alert_Type: "&cType correct alert typre (title, actionbar, chat)!"
-  Invalid_Chat_Type: "&cPodaj prawidłowy argument; Dostępne: on, off, clear."
+  Invalid_Chat_Type: "&cProvide a valid argument; available: on, off, clear."
   Alert_Header: "&8&m---------- &8&l[ &3&lALERT&8&l ]&8&m ----------"
   Alert_Title: "&8* &4&lALERT &8*"
   Alert_ActionBar: "&8* &4&lALERT &8*"
@@ -62,7 +62,7 @@ Commands:
   Heal_Other: "&3You have healed &b{player}&3."
   HelpopSent: "&8[&4Helpop&8] &7Your message has been forwarded to server admins!"
   HelpopFormat: "&8[&4Helpop&8] &c {sender} : {result}"
-  HelpopNoMessage: "&cPodaj wiadomość!"
+  HelpopNoMessage: "&cProvide message!"
   IP_Command: "&3IP of &b{player} &3 is &b{InetSocketAddress}"
   Kicked: "&cYou have been kicked out of the server!\n\n&cBy: &b{admin} \n\n&cReason: &b{reason}"
   Kick: "&3Kicked &b{player}"
