Prepare for porting messages_en.yml
Took 2 hours 8 minutes

--- a/src/main/resources/localization/messages_en.yml
+++ b/src/main/resources/localization/messages_en.yml
@@ -21,10 +21,10 @@
 Commands:
   No_Console: "&cYou can't use this command as a console."
   No_Permission: "&cYou don't have permission to use this command."
-  AdminChatPrefix: "&8[&4AdminChat&8] » &7"
-  Invalid_PlayerNickName: "&cOk... What's a pitty, that this player is not even on this server. Who do you want me to teleport? Air?"
-  Invalid_Alert_Type: "&cType correct alert typre (title, actionbar, chat)!"
+  Invalid_PlayerNickName: "&cOk... What's a pitty, that this player is not even on this server."
+  Invalid_Alert_Type: "&cType correct alert type (title, actionbar, chat)!"
   Invalid_Chat_Type: "&cProvide a valid argument; available: on, off, clear."
+  AdminChatPrefix: "&3┃ &9&lMODCHAT &3┃ &6"
   Alert_Header: "&8&m---------- &8&l[ &3&lALERT&8&l ]&8&m ----------"
   Alert_Title: "&8* &4&lALERT &8*"
   Alert_ActionBar: "&8* &4&lALERT &8*"
@@ -43,15 +43,19 @@ Commands:
   Checkban_Expiry: "&3Expires: {expiry}"
   Checkban_Reason: "&3Reason: {reason}"
   Checkban_Source: "&Source: {source}"
-  Enderchest_Succesful: "&bEnderchest opened for &3{player}"
+  Checkban_NotBanned: "&3Player &b{player} &3is not banned."
+  Enderchest_Successful: "&bEnderchest opened for &3{player}"
   Feed: "&3You are no more hungry!"
   Feed_Other: "&3Succesfully feed {player}."
-  FlyEnabled: "&3Flying &benabled."
-  FlyDisabled: "&3Flying &bdisabled."
+  Fly: "&3Flying {status}."
   FreezeAction: "&cYou are frozen. You can't do anything."
+  FreezeOther: "&cThis player is frozen."
+  Freeze_Parameter: "&cProvide valid parameter; Available: 'on', 'off'"
   FreezeBypass: "&cThis player has permission 'essentials.freeze.bypass', so you can't freeze them."
   Freezed: "&3Freezed {player}"
+  Freezed_disabled: "&3Unfreezed {player}"
   Frozen: "&3Administrator {admin} freezed you."
+  Frozen_disabled: "&3Administrator {admin} unfreezed you."
   FreezeInvalidParameter: "&cInvalid parameter; Available: 'on', 'off'"
   Gamemode_Provide_Parameter: "&cProvide parameter 1"
   Gamemode_Changed: "&3Gamemode changed to &b{gamemode}"
@@ -71,10 +75,8 @@ Commands:
   Muted: "&3You have been muted by {admin} &3 za {reason}"
   MutedEvent: "&cYou are muted!"
   NickChanged: "&3Changed nickname of &b{target} na &r{nickname}"
+  NickProvide: "&cPlease provide a nickname."
   Ping: "&aYour ping: &6{ping}"
-  RealName: "&3Real name of &b{player} &3 is &b{realname}"
-  RealName_NotNicked: "&3This player is not nicked."
-  RealName_NoParam: "&cType player nickname, you want to check."
   Reload_Success: "&3Reloaded config."
   Reload_Fail: "&cReloading failed. Check console for more errors."
   Stonecutter_Successful: "&3Opened stonecutter for &b{player}."
@@ -89,8 +91,5 @@ Commands:
   VanishEnabled: "&3Vanish enabled."
   VanishDisabled: "&3Vanish disabled."
   Workbench: "&3Opened workbench for &b{player}"
-
-
-
 # Do not touch.
 Version: 1
